--- a/quarkus-eda-knative-demo/src/main/resources/META-INF/resources/index.html
+++ b/quarkus-eda-knative-demo/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>quarkus-eda-knative-demo - 1.0.0-SNAPSHOT</title>
+        <title>kube-native-java - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -141,6 +141,7 @@
             }
             .provided-code b {
                 font-weight: 400;
+                margin-bottom: 15px;
             }
             @media screen and (max-width: 1023px) {
                 .header-wrapper {
@@ -235,9 +236,9 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>org.acme</code></li>
-                                <li>ArtifactId: <code>quarkus-eda-knative-demo</code></li>
+                                <li>ArtifactId: <code>kube-native-java</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>2.7.5.Final</code></li>
+                                <li>Quarkus Version: <code>3.0.4.Final</code></li>
                             </ul>
                         </div>
                     </div>
@@ -249,17 +250,18 @@
                 <div class="left-column">
                     <h1>You just made a Quarkus application.</h1>
                     <p>This page is served by Quarkus.</p>
-                    <a href="/q/dev/" class="cta-button">Visit the Dev UI</a>
+                    <a href="/q/dev-ui/" class="cta-button">Visit the Dev UI</a>
                     <p>This page: <code>src/main/resources/META-INF/resources/index.html</code></p>
                     <p>App configuration: <code>src/main/resources/application.properties</code></p>
                     <p>Static assets: <code>src/main/resources/META-INF/resources/</code></p>
                     <p>Code: <code>src/main/java</code></p>
+                    <p>Dev UI V1: <a href="/q/dev-v1/">/q/dev-v1</a></p>
                     <p>Generated starter code:</p>
                     <ul class="provided-code">
                                 <li class="provided-code">
-            <b>RESTEasy JAX-RS</b>&nbsp;Easily start your RESTful Web Services
+            <b>RESTEasy Reactive</b>&nbsp;Easily start your Reactive RESTful Web Services
             <br />&rsaquo; <code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code>
-            <br />&rsaquo; <a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide</a>
+            <br />&rsaquo; <a href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources" class="guide-link" target="_blank">Related guide</a>
         </li>
 
                     </ul>
